# flaskr

./: .coverage  .gitignore  config.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  check_list.txt  extensions.py  init_db.py  web_forms.py
app/auth/: __init__.py  routes.py
app/main/: routes.py
app/migrations/versions/: 0c577581545e_add_column_slug_author_id_to_table_post.py  1e82eecf0eba_first_database.py  23b4c8f8010c_add_column_profile_pic_to_table_user.py  3faa24feabc3_initial_database.py  a82a6bd6c026_add_column_date_posted_to_table_post.py  d5f672ee1df6_add_column_about_author_to_table_user.py
app/models/: post.py  posts.py  user.py  users.py
app/old/templates/: flash_messages.html  footer.html  navbar.html
app/posts/: __init__.py  routes.py
app/questions/: __init__.py
app/static/css/: admin.css  style.css
app/static/js/: scripts.js
app/templates/: base.html  base_auth.html  dashboard.html  navbar.html
app/templates/auth/: register.html
app/templates/dashboard/: base.html  index.html  navbar.html
app/templates/posts/: add-post.html  base.html  index.html  posts.html  show.html  update.html
app/templates/public/: about.html  base.html  footer.html  index.html  navbar.html  services.html  (+1 more)
app/tutorial/: __init__.py  routes.py
app/users/: __init__.py  routes.py
blog/: login.html  register.html  single.html
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html  error.html  footer.html  navbar.html  profile.html
instance/: flasker.sqlite
test/: conftest.py  test_blog.py  test_factory.py
(+17 files in other folders)
