[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
    "flask",
]
optional-dependencies = {'dev'=['check-manifest'], 'test'= ['coverage']}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]